...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_favorites_button"
        android:layout_width="266dp"
        android:layout_height="51dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/overpass_variablefont_wght"
        android:text="Show Favorite list"
...
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/lookupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="LOOKUP"
        android:textColor="@color/white"
...
        android:textColorHighlight="#FEA62C"
        android:textColorLink="#FEA62C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/latitudeInput"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:hint="Latitude"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/longitudeInput"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="10dp"
        android:hint="Longitude"
        android:textSize="20sp"
...
