...
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_sun"
        app:srcCompat="@drawable/main_deezer" />

    <ImageButton
        android:id="@+id/main_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
