...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/sunrise_bg">

    <!--    <Button-->
    <!--        android:id="@+id/addFavoriteButton"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Add to Favorites"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/sunsetTextView"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintVertical_bias="1.0"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginBottom="16dp" />-->

    <Button
        android:id="@+id/backButton"
        android:layout_width="133dp"
        android:layout_height="108dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="630dp"
        android:background="@android:color/transparent"
        android:text="←"
...
