...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_todays_timings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Lookup"
            android:textSize="18sp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/overpass_variablefont_wght"/>

        <Button
            android:id="@+id/button_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete"
            android:textSize="18sp"
            android:background="@android:color/transparent"
...
