...
            android:textStyle="bold"
            android:textColor="#EA6D35"
            />

        <!-- Recipe Summary -->
        <TextView
            android:id="@+id/textViewSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
...
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:autoLink="web"
            android:linksClickable="true" />

        <Button
            android:id="@+id/buttonSaveToFavorites"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/textViewFullRecipeUrl"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
...
