...
    <string name="open_recipe">Open Recipe</string>
    <string name="open_dictionary">Open Dictionary</string>
    <string name="open_sunseeker">Open SunSeeker</string>
  
<!--Strings for Alessandra Project-->
    <string name="recipe_delete_all_button">Delete All</string>
    <string name="recipe_save_to_favorites">Save to Favorites</string>
    <string name="recipe_welcome_to">Welcome to \nRecipe Search</string>
    <string name="recipe_search_for_a_">Search for a recipe</string>
    <string name="recipe_search">Search</string>
    <string name="recipe_list_my_favorites">List my Favorites</string>
    <string name="recipe_id">Recipe ID:</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_delete_all_question">Delete All Recipes</string>
    <string name="recipe_delete_sure_question">Are you sure you want to delete all recipes from favorites?</string>
    <string name="recipe_delete_confirmation">All favorite recipes were deleted</string>
...
